# oewang

./: .env.admin  .env.api  .env.app  .env.example  .env.global.example  .env.test  .env.website  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  TESTING.md  add-seq.sql  biome.json  bun.lockb  bunfig.toml  docker-compose.yml  fix-admin-imports.mjs  package.json  preview.html  test-api.ts  test-contacts-query.ts  turbo.json  update-admin.ts  update_admin.sql  view-supabase-users.ts  view-users.ts
apps/ai/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
apps/ai/app/: config.py  main.py
apps/ai/app/api/middleware/: auth.py
apps/ai/app/api/routes/: advisor.py  analyzer.py  anomaly.py  capabilities.py  chatbot.py
apps/ai/app/core/: audit.py  currency.py  database.py  embeddings.py  ids.py  llm.py  quota.py  serde.py  sessions.py
apps/ai/app/modules/advisor/: retriever.py  service.py
apps/ai/app/modules/analyzer/: categories.py  service.py
apps/ai/app/modules/anomaly/: model.py  service.py
apps/ai/app/modules/chatbot/: memory.py  prompts.py  service.py  tools.py
apps/ai/app/modules/execution/: analysis.py  debts.py  (+5 more)
apps/ai/app/schemas/: advisor.py  analyzer.py  anomaly.py  capabilities.py  chatbot.py
apps/ai/app/utils/: helpers.py  logger.py
apps/ai/oewang_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/ai/scripts/: seed_knowledge.py
apps/ai/tests/: test_advisor.py  test_analyzer.py  test_anomaly.py  test_capabilities.py  test_chatbot.py  test_currency.py  test_execution.py  test_execution_db.py  test_quota.py
(+1091 files in other folders)
