[project]
name = "oewang-ai"
version = "0.1.0"
description = "Python FastAPI AI service for oewang (finance chatbot, NLP analyzer, RAG advisor, anomaly detection)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "openai>=1.50",
  "asyncpg>=0.30",
  "pgvector>=0.3",
  "pydantic-settings>=2.6",
  "scikit-learn>=1.5",
  "numpy>=2.0",
  "apscheduler>=3.10",
  "slowapi>=0.1.9",
  "httpx>=0.27",
  "cuid2>=2.0",
  "pypdf>=5.0",
  "openpyxl>=3.1",
  "pillow>=10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
